fix: update spacing for mobile for blog post component

--- a/frontend/src/components/BlogPost/BlogPost.css
+++ b/frontend/src/components/BlogPost/BlogPost.css
@@ -40,6 +40,13 @@
     max-height: 3rem;
 }
 
+@media screen and (max-width: 913px) {
+    .blog-post-title {
+        padding-bottom: 24px;
+    }
+}
+
+
 .blog-post-preview {
     min-height: 6rem;
     font-size: 18px;
